css/main-styles.css
/* ... */
.about-link--right .about-link__link {
	-webkit-box-ordinal-group: 2;
	-ms-flex-order: 1;
	order: 1;
}

.about-link--right .about-link__img {
	-webkit-box-ordinal-group: 3;
	-ms-flex-order: 2;
	order: 2;
	-webkit-transform-origin: 50% 45%;
	transform-origin: 50% 45%;
	-webkit-transform: rotate(180deg);
	transform: rotate(180deg);
}

.about-link--up {
	-ms-grid-columns: 80% 20%;
	grid-template-columns: 80% 20%;
	text-align: center;
}

.about-link--up .about-link__link {
	-webkit-box-ordinal-group: 2;
	-ms-flex-order: 1;
	order: 1;
}

.about-link--up .about-link__img {
	-webkit-box-ordinal-group: 3;
	-ms-flex-order: 2;
	order: 2;
	-webkit-transform-origin: 50% 45%;
	transform-origin: 50% 45%;
	-webkit-transform: rotate(90deg);
	transform: rotate(90deg);
}

.header__container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
}

.header__logo {
	position: absolute;
	height: 200px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-pack: end;
	-ms-flex-pack: end;
	justify-content: flex-end;
}

@media (min-width: 1280px) {
	.header__logo {
		height: calc(200px + 100 * ((100vw - 1280px) / 640));
	}
}

@media (max-width: 400px) {
	.header__logo {
		height: 180px;
	}
}

.header__logo--simple {
	position: absolute;
	height: 120px;
	width: 80%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: reverse;
	-ms-flex-direction: row-reverse;
	flex-direction: row-reverse;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
}

@media (min-width: 1900px) {
	.header__logo--simple {
		height: 150px;
	}
}

@media (max-width: 1020px) {
	.header__logo--simple {
		height: 100px;
	}
}

@media (max-width: 500px) {
	.header__logo--simple {
		width: 70%;
	}
}

.header__subname {
	font-size: 14px;
	padding-bottom: 5px;
	z-index: 4;
}

@media (min-width: 1280px) {
	.header__subname {
		font-size: calc(14px + 6 * ((100vw - 1280px) / 640));
	}
}

.header__subname--add {
	visibility: hidden;
}

@media (max-width: 1020px) {
	.header__subname--add {
		visibility: visible;
	}
}

.header__name {
	font-size: calc(70px + 22 * ((100vw - 320px) / 960));
	margin-left: -5px;
}

@media (min-width: 1280px) {
	.header__name {
		font-size: calc(92px + 48 * ((100vw - 1280px) / 640));
	}
}

.header__burger {
	display: none;
	z-index: 8;
}

@media (max-width: 1020px) {
	.header__burger {
		display: block;
		position: relative;
		width: 30px;
		height: 20px;
		-ms-flex-item-align: end;
		align-self: flex-end;
		margin: 40px 0px;
	}
	.header__burger::before,
	.header__burger::after {
		content: "";
		background-color: #fff;
		position: absolute;
		width: 100%;
		height: 4px;
		left: 0;
		-webkit-transition: all 0.3s ease 0s;
		transition: all 0.3s ease 0s;
	}
	.header__burger::before {
		top: 0;
	}
	.header__burger::after {
		bottom: 0;
	}
	.header__burger.active span {
		-webkit-transform: scale(0);
		transform: scale(0);
	}
}

.header__burger.active::before {
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
	top: 8px;
}

.header__burger.active::after {
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
	bottom: 8px;
}

@media (max-width: 1020px) {
	.header__span {
		position: absolute;
		background-color: #fff;
		left: 0;
		width: 100%;
		height: 4px;
		top: 8.4px;
		-webkit-transition: all 0.3s ease 0s;
		transition: all 0.3s ease 0s;
	}
}

.header__menu {
	height: 100px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: end;
	-ms-flex-pack: end;
	justify-content: flex-end;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	font-size: 12px;
	-webkit-transition: all 0.3s ease 0s;
	transition: all 0.3s ease 0s;
}

@media (min-width: 1280px) {
	.header__menu {
		height: calc(100px + 50 * ((100vw - 1280px) / 640));
	}
}

@media (min-width: 1280px) {
	.header__menu {
		font-size: calc(12px + 3 * ((100vw - 1280px) / 640));
	}
}

@media (max-width: 1020px) {
	.header__menu {
		position: fixed;
		-webkit-box-pack: center;
		-ms-flex-pack: center;
		justify-content: center;
		top: 0;
		right: -100%;
		width: 100%;
		height: 100%;
		background-color: #217aff;
		z-index: 4;
	}
}

.header__menu.active {
	right: 0;
}

.header__menu--simple {
	z-index: 7;
}

@media (max-width: 1020px) {
	.header__menu--simple {
		background-color: #fa64c7;
	}
}

.header__list {
	-webkit-box-flex: 0;
	-ms-flex: 0 0 30.333%;
	flex: 0 0 30.333%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
}

@media (max-width: 1020px) {
	.header__list {
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		-ms-flex-direction: column;
		flex-direction: column;
		-webkit-box-pack: center;
		-ms-flex-pack: center;
		justify-content: center;
		-webkit-box-align: end;
		-ms-flex-align: end;
		align-items: flex-end;
		font-size: 50px;
	}
}

@media (max-width: 500px) {
	.header__list {
		font-size: 25px;
	}
}

@media (max-width: 1020px) {
	.header__link {
		line-height: 110px;
	}
}

@media (max-width: 500px) {
	.header__link {
		line-height: 70px;
	}
}

.header__link:active,
.header__link:hover {
	text-decoration: underline;
}

.header__link--now {
	color: #217aff;
	text-decoration: line-through;
}

/* ------------------------ Главная страница ------------------------ */
.main-screen__container {
	height: calc(100vh - 100px);
	display: -ms-grid;
	display: grid;
	-ms-grid-columns: (1fr 50px) [11] 1fr;
	grid-template-columns: repeat(11, 1fr 50px) 1fr;
	-ms-grid-rows: (1fr) [6];
	grid-template-rows: repeat(6, 1fr);
}
/* ... */

